--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <span id="question">The Question should be displayed here...</span>
+        <span id="question">Question</span>
     </div>
 
     <button class="button" onclick="changeQuestion()">Change Question</button>
