--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 width: 100%;
             }
             #question {
-                font-size: 2.5em; /* Adjust the font size for mobile */
+                font-size: 4em; /* Adjust the font size for mobile */
             }
         }
 
@@ -49,11 +49,11 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <span id="question">Question</span>
+    <div class="container" onclick="changeQuestion()">
+        <span id="question">Tap here...</span>
     </div>
 
-    <button class="button" onclick="changeQuestion()">Change Question</button>
+    <!-- <button class="button" onclick="changeQuestion()">Change Question</button> -->
 
     <script>
         //var hands=["左手","右手"] //用不到
