--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <!-- <button class="button" onclick="changeQuestion()">Change Question</button> -->
 
     <script>
+        document.addEventListener('click', changeQuestion);
         //var hands=["左手","右手"] //用不到
         // var legs=["左腳","右腳"] //用不到
         var partsforhandsLR = ["後腳跟","膝蓋","手肘","耳朵","肩膀","手腕","臉頰"]//手摸且可以組合出左摸右的部位,就分普通的摸、左摸右、右摸左、右摸右、左摸左
