--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container" onclick="changeQuestion()">
-        <span id="question">Tap here...</span>
+        <span id="question">Tap anywhere...</span>
     </div>
 
     <!-- <button class="button" onclick="changeQuestion()">Change Question</button> -->
